force-app/main/default/objects/HDT_ExciseTranscode__mdt/HDT_ExciseTranscode__mdt.object-meta.xml
<CustomObject>
    <label>Transcodifica Accise</label>
    <pluralLabel>Transcodifiche Accise</pluralLabel>
</CustomObject>