force-app/main/default/objects/HDT_ExciseTranscode__mdt/fields/Excise__c.field-meta.xml
<CustomField>
    <fullName>Excise__c</fullName>
    <label>Accise</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>