force-app/main/default/objects/HDT_ExciseTranscode__mdt/fields/ExciseString__c.field-meta.xml
<CustomField>
    <fullName>ExciseString__c</fullName>
    <label>Imposta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>