force-app/main/default/objects/HDT_ExciseTranscode__mdt/listViews/HDT_Excises.listView-meta.xml
<ListView>
    <fullName>HDT_Excises</fullName>
    <columns>MasterLabel</columns>
    <columns>ExciseString__c</columns>
    <columns>Excise__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>Excises</label>
    <language>en_US</language>
</ListView>